tests/NormalTests/paczka2/big_fuzzy/32302282.err
Error in line 10: S333 A771 58,83
Error in line 14: 66OwllU7ZE S103 2,2
Error in line 2: nzTiVhEU S103 94,5
Error in line 20: 66OwllU7ZE S228 15,1
Error in line 25: erX10W S103 55,2
Error in line 42: WKT A771 39,5
Error in line 46: z4qqwZwYB S228 10,4
Error in line 48: z4qqwZwYB S103 3,1
Error in line 56: ZZGG S333 68,1
Error in line 57: ZZGG A771 27,0
Error in line 61: S333 S103 61,9
Error in line 65: z4qqwZwYB S103 40,3
Error in line 76: z4qqwZwYB S333 93,6
Error in line 81: nzTiVhEU S333 146,4
Error in line 82: S333 S228 96,9
Error in line 91: nzTiVhEU S103 33,54
Error in line 106: ZZGG S333 87,0
Error in line 100: S333 S103 68,8
Error in line 87: z4qqwZwYB S103 1,2
Error in line 116: S333 A771 -3,5
Error in line 119: z4qqwZwYB S103 53,3
Error in line 121: ZZGG S228 78,1
Error in line 142: 66OwllU7ZE A771 44,4
Error in line 147: WKT S103 40,2
Error in line 128: ZZGG A771 76,5
Error in line 143: z4qqwZwYB A771 23,2
Error in line 141: S333 A771 8,4
Error in line 171: z4qqwZwYB S103 42,1
Error in line 180: z4qqwZwYB S228 73,0
Error in line 181: z4qqwZwYB S103 31,4
Error in line 192: ZZGG S103 -1,1
Error in line 190: ZZGG S103 91,4
Error in line 204: erX10W S103 210,5
Error in line 214: WKT A771 72,6
Error in line 211: ZZGG A771 84,7
Error in line 220: S333 S333 34,9
Error in line 209: z4qqwZwYB S333 4,1
Error in line 216: WKT S103 20,7
Error in line 229: nzTiVhEU S228 43,8
Error in line 231: nzTiVhEU S103 53,9
Error in line 233: 66OwllU7ZE S333 13,8
Error in line 238: ZZGG S333 87,8
Error in line 244: ZZGG S228 69,2
